--- a/package.json
+++ b/package.json
@@ -10,23 +10,33 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.89.0",
+    "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "expo": "~54.0.7",
+    "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
     "expo-router": "~6.0.4",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.10",
     "expo-web-browser": "~15.0.7",
+    "nativewind": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-worklets": "0.5.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
